--- a/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoEnableField.html
+++ b/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoEnableField.html
@@ -19,7 +19,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="evento/eventoFragment :: evento('enableField', true)"></th:block>
+					<th:block th:include="eventoPianoFormativo/eventoPianoFormativoFragment :: eventoPianoFormativo('enableField', true)"></th:block>
 
 				</div>
 			</div>
