--- a/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoShow.html
+++ b/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoShow.html
@@ -18,7 +18,7 @@
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="evento/eventoFragment :: evento('show', true)"></th:block>
+						<th:block th:include="eventoPianoFormativo/eventoPianoFormativoFragment :: eventoPianoFormativo('show', true)"></th:block>
 					</div>
 
 				</div>
