--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -49,7 +49,7 @@
 									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche}">label.anagrafiche</a></li>
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
-									<li><a th:href="@{/provider/evento/list}" th:text="#{label.eventi}"></a></li>
+									<li><a th:text="#{label.eventi}" onclick="alert('Work in Progress')"></a></li>
 									<!--
 									<li><a href="#" th:text="#{label.eventi}">label.eventi</a></li>
 									<li><a href="#" th:text="#{label.relazione_annuale}">label.relazione_annuale</a></li>
@@ -67,7 +67,7 @@
 								</a>
 								<ul class="nav child_menu" style="display: none">
 									<li><a th:href="@{/provider/list}" th:text="#{label.provider}">label.provider</a></li>
-									<li><a th:href="@{/evento/list}" th:text="#{label.eventi}"></a></li>
+									<li><a th:text="#{label.eventi}" onclick="alert('Work in Progress')"></a></li>
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/seduta/list}" th:text="#{label.lista_sedute}">label.lista_sedute</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
