--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -6,16 +6,78 @@
 </head>
 <body>
 	<div layout:fragment="content">
+
+		<!-- modali per inserimento nuovo evento (scelta opzioni) -->
+		<th:block th:if="${canCreateEvento}">
+			<div id="scelta-tipologia-modal" class="modal fade modal-scelta-tipologia" data-model-index="1" role="dialog">
+				<div class="modal-dialog modal-md">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel" th:text="#{label.scelta_procedura_formativa_evento}">Scelta della tipologia dell'Evento da inserire</h4>
+						</div>
+						<div class="modal-body">
+
+							<form id="selezioneTipologiaEvento" class="form-horizontal"
+								th:action="@{|/provider/${providerId}/evento/new|}"
+								method="post" enctype="multipart/form-data"
+								novalidate="novalidate">
+
+								<div class="item modalAlert">
+									<div class="radio" th:each="proceduraFormativa, row : ${T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).values()}" th:classappend="${error == true} ? 'bad'">
+										<label>
+											<input type="radio" class="flat" name="proceduraFormativa" th:value="${proceduraFormativa}"/>
+											<span th:text="${proceduraFormativa.nome}"></span>
+										</label>
+									</div>
+									<div th:if="${error}" class="alert" th:text="#{error.empty}" style="left: 0; opacity: inherit"></div>
+								</div>
+
+								<input id="submitTipologiaModal" type="submit" style="display: none;" />
+
+							</form>
+
+						</div>
+						<div class="modal-footer">
+							<label for="submitTipologiaModal" class="btn btn-success pull-right" th:text="#{label.Ok}">Ok</label>
+							<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</th:block>
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.list_eventi(${titolo})}">Lista degli eventi del provider (denominazioneLegale)</h2>
+						<h2 th:text="${denominazioneProvider != null} ? #{label.lista_eventi_provider(${denominazioneProvider})} : #{label.lista_eventi}">Lista degli eventi</h2>
+						<div class="pull-right buttons-header">
+
+							<div class="dropdown pull-right">
+  								<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" th:if="${canCreateEvento}">
+									<span th:text="#{label.nuovo_evento}"></span>
+									<span class="caret"></span>
+								</button>
+								<!-- menù raggruppato per segreteria -->
+								<ul class="dropdown-menu actions">
+									<!-- <li><a th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button" class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li> -->
+									<li><a th:text="#{label.creazione_evento}" data-toggle="modal" data-target=".modal-scelta-tipologia"></a></li>
+									<li><a th:text="#{label.attuazione_evento}"></a></li>
+									<li><a th:text="#{label.riedizione_evento}"></a></li>
+								</ul>
+							</div>
+						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
 
-						<div th:if="${#lists.isEmpty(eventoList)}" th:text="#{label.nessun_evento_list}"></div>
+						<div th:if="${#lists.isEmpty(eventoList)}">
+							<h2 class="col-xs-12 text-center">
+								<span class="glyphicon glyphicon-warning-sign" aria-hidden="true"> </span> <i th:text="#{label.nessun_evento_list}">Non ci sono eventi!</i>
+							</h2>
+						</div>
 
 						<table th:unless="${#lists.isEmpty(eventoList)}" class="datatable-responsive-eventi-provider table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 							<thead>
@@ -31,7 +93,7 @@
 							<tbody th:remove="all-but-first">
 								<tr th:each="evento, row : ${eventoList}">
 									<td><a th:text="${evento.titolo}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/show|}"></a></td>
-									<td th:text="${evento.id} + '-' + ${evento.edizione}"></td>
+									<td th:text="${evento.getCodiceIdentificativo()}"></td>
 									<td th:text="${evento.proceduraFormativa.nome}"></td>
 									<td th:text="${#numbers.formatDecimal(evento.costo, 1, 'POINT', 2, 'COMMA')}"></td>
 									<td th:if="${evento.pagato}"><span class="label-pagato" th:text="#{label.pagato}"></span></td>
@@ -66,6 +128,20 @@
 							"sClass": "center"
 						} ]
 					})
+
+					if([[${error}]]) {
+						$("#scelta-tipologia-modal").modal("show");
+					}
+
+					$("input[name=proceduraFormativa]").each(function() {
+						$(this).on('ifToggled', function() {
+							$('div.alert').fadeOut(150, function() {
+								$(this).remove();
+							});
+							$('.bad').removeClass('bad');
+						});
+					})
+
 				})
 
 			/*]]>*/
