cambiata modale scelta lookup persona, abbozzate modali scelta eventi

--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -20,6 +20,9 @@
 						<button type="button" class="btn btn-success btn-scelta btn-first" id="trova_anagrafica" data-toggle="modal" data-target=".modal-lookup"><span class="text-btn-scelta" th:text="#{label.seleziona_anagrafica}">Seleziona anagrafica esistente</span></button>
 						<a class="btn btn-success btn-scelta btn-last" id="nuova_anagrafica" href=""><span class="text-btn-scelta" th:text="#{label.inserisci_nuova_anagrafica}">Inserisci nuova anagrafica</span></a>
 					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+					</div>
 				</div>
 			</div>
 		</div>
