--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -44,6 +44,7 @@
 										<th th:text="#{label.accreditamento_scadenza}">Scadenza</th>
 									</th:block>
 									<th th:if="${mappaCarica != null}" th:text="#{label.lista_valutatori}">Lista Valutatori</th>
+									<th th:if="${#authentication.principal.isReferee() and scadenzaValutazione != null}" th:text="#{label.scadenza_valutazione}">scadenza</th>
 								</tr>
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
@@ -62,6 +63,7 @@
 										<div th:unless="${#sets.isEmpty(mappaCarica.get(accreditamento.id))}" th:each="valutatore, row : ${mappaCarica.get(accreditamento.id)}" class="valutatore" th:text="${valutatore.isSegreteria() ? 'Segreteria ECM - ' : 'Referee - '} + ${valutatore.getFullName()}"></div>
 										<div th:if="${#sets.isEmpty(mappaCarica.get(accreditamento.id))}" th:text="#{label.da_prendere_in_carica}" class="danger"></div>
 									</td>
+									<td th:if="${#authentication.principal.isReferee() and scadenzaValutazione != null}" th:text="${#temporals.format(scadenzaValutazione, 'dd/MM/yyyy')}"></td>
 								</tr>
 							</tbody>
 						</table>
