cambiato nome evento piano formativo

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -77,7 +77,7 @@
 						</div>
 						<div class="modal-body">
 
-							<div>TODO table con eventi del piano formativo e un button che mandi in /provider/${providerId}/evento/${evento.id}/republication </div>
+							<div>TODO table con eventi completati e un button che mandi in /provider/${providerId}/evento/${evento.id}/republication </div>
 
 						</div>
 						<div class="modal-footer">
