Modifiche alle entity Evento, EventoPianoFormativo per gestione Eventi
WORK IN PROGRESS
modifiche importanti: modificato il repository di Evento e
EventoPianoFormativo a JpaRepository per avere il flush in modo da
salvare e subito dopo chiamare il buildPrefix.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -550,6 +550,15 @@ h2 {
 	display: block;
 }
 
+.value-edit {
+	padding-top: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	min-height: 30px;
+	font-size: inherit;
+	display: block;
+}
+
 .label-show {
 	font-size: 17px;
 }
@@ -1084,4 +1093,9 @@ tr.integrazione-eliminazione td:first-child a{
 .button-container {
 	height: 90px;
 	width: 225px;
+}
+
+.in-dropdown {
+	font-weight: inherit;
+	margin-bottom: 0px;
 }
