--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -123,7 +123,7 @@
 							<thead>
 								<tr>
 									<th th:text="#{label.titolo}">label.titolo</th>
-									<th th:text="#{label.id}">label.id</th>
+									<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
 									<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
 									<th th:text="#{label.prezzo}">label.prezzo</th>
 									<th th:text="#{label.stato}">label.stato</th>
