--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -25,11 +25,11 @@
 			<div class="col-lg-6 col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.riepilogo_evento(${eventoWrapper.evento.id + '-' + eventoWrapper.evento.edizione})}">Evento</h2>
+						<h2 th:text="#{label.riepilogo_evento(${eventoWrapper.evento.getCodiceIdentificativo()})}">Evento</h2>
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="evento/eventoFragment :: evento('show', true)"></th:block>
+					<th:block th:include="evento/eventoShow :: eventoShow"></th:block>
 
 				</div>
 			</div>
