--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -59,8 +59,8 @@
 
 							<div class="item form-group with-margin-top">
 								<div class="col-xs-5"></div>
-								<div class="col-xs-2">
-									<button type="submit" class="btn btn-primary single" onclick="spinCog();"><span th:text="#{label.elabora}"> </span> <i class="fa fa-cog"></i></button>
+								<div class="col-xs-2 text-center">
+									<button type="submit" class="btn btn-primary single elabora-btn" onclick="spinCog();"><span th:text="#{label.elabora}"> </span> <i class="fa fa-cog"></i></button>
 								</div>
 							</div>
 
