--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -128,9 +128,308 @@
 					</div>
 				</div>
 
+				<div class="divider-dashed"></div>
+
+				<!-- BLOCCO INFO SEDE -->
+				<div class="item form-group">
+					<label class="col-xs-12">
+						<span th:text="#{label.informazioni_sede}">Titolo</span>
+					</label>
+				</div>
+				<!-- PROVINCIA -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>7</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="provincia">
+						<span th:text="#{label.provincia}">Provincia</span>
+						<span class="required">*</span>
+					</label>
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+						<select id="provincia"
+							class="selectpicker required"
+							th:field="${eventoWrapper.evento.sedeEvento.provincia}"
+							data-width="100%" data-style="btn-primary"
+							data-actions-box="true" data-size="10"
+							data-hide-disabled="false"
+							onchange="sendAjaxRequestProvincia()"
+							title="Seleziona una provincia...">
+							<option
+								th:each="provincia : ${elencoProvince}"
+								th:value="${provincia}"
+								th:text="${provincia}">
+							</option>
+						</select>
+					</div>
+				</div>
+				<!-- COMUNE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>8</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="comune">
+						<span th:text="#{label.comune}">Comune</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+						<select id="comune"
+							class="selectpicker required"
+							th:field="${eventoWrapper.evento.sedeEvento.comune}"
+							data-width="100%" data-style="btn-primary"
+							data-actions-box="true" data-size="10"
+							data-hide-disabled="false"
+							th:disabled="${eventoWrapper.evento.sedeEvento.comune == null}"
+							title="Seleziona un comune...">
+							<!-- options popolate alla selezione della provincia -->
+						</select>
+					</div>
+				</div>
+				<!-- INDIRIZZO -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>9</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="indirizzo">
+						<span th:text="#{label.indirizzo}">Indirizzo</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="indirizzo">
+						<input type="text" class="form-control" th:field="${eventoWrapper.evento.sedeEvento.indirizzo}" />
+					</div>
+				</div>
+				<!-- LUOGO -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>10</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="luogo">
+						<span th:text="#{label.luogo}">Luogo</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="luogo">
+						<input type="text" class="form-control" th:field="${eventoWrapper.evento.sedeEvento.luogo}" />
+					</div>
+				</div>
+
+				<div class="divider-dashed"></div>
+
+				<!-- DATA INIZIO -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>11</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dataInizio">
+						<span th:text="#{label.data_inizio}">Data inizio</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group datapick">
+						<input type="text" id="dataInizio" class="form-control"
+							name="data" th:field="${eventoWrapper.evento.dataInizio}" />
+						<span class="input-group-addon" id="dataInizio" onclick="$('#dataInizio').click()">
+ 							<i class="glyphicon glyphicon-calendar"></i>
+						</span>
+					</div>
+				</div>
+
+				<!-- DATA FINE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>12</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dataFine">
+						<span th:text="#{label.data_fine}">Data fine</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group datapick">
+						<input type="text" id="dataFine" class="form-control"
+							name="data" th:field="${eventoWrapper.evento.dataFine}" />
+						<span class="input-group-addon" id="dataFineButton" onclick="$('#dataFine').click()">
+ 							<i class="glyphicon glyphicon-calendar"></i>
+						</span>
+					</div>
+				</div>
+
+				<!-- DATE INTERMEDIE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>13</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dateIntermedie">
+						<span th:text="#{label.date_intermedie}">Data intermedie</span>
+						<span class="required">*</span>
+					</label>
+				</div>
+				<div class='nextDataIntermedia item form-group'>
+					<div class='col-md-4 col-sm-4 col-xs-12'></div>
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group datapick">
+						<input type="text" class="form-control"
+							th:field="${eventoWrapper.dateIntermedieTemp[__${#lists.size(eventoWrapper.dateIntermedieTemp)}__]}" />
+						<span class="input-group-addon not-last" onclick="alert('todo')">
+ 							<i class="glyphicon glyphicon-calendar"></i>
+						</span>
+						<span class="input-group-addon" onclick="aggiungiDataIntermedia(this)">
+							<i class="fa fa-plus"></i>
+						</span>
+					</div>
+				</div>
+				<div class="date-intermedie-container"></div>
+
+				<!-- OBIETTIVO NAZIONALE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>14</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivoNazionale">
+						<span th:text="#{label.obiettivo_formativo_nazionale}">Obiettivo Strategico Nazionale</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+						<select id="obiettivoNazionale"
+							class="selectpicker required"
+							th:field="${eventoWrapper.evento.obiettivoNazionale}"
+							data-width="100%" data-style="btn-primary"
+							data-actions-box="true" data-size="10"
+							data-hide-disabled="false"
+							title="Seleziona un obiettivo...">
+							<optgroup class="optgroup-primary"
+								th:each="categoriaObiettivoNazionale, row: ${T(it.tredi.ecm.dao.enumlist.CategoriaObiettivoNazionale).values()}"
+								th:label="${categoriaObiettivoNazionale.nome}"
+								th:remove="all-but-first">
+								<option
+									th:each="obiettivoNazionale, row: ${eventoWrapper.obiettiviNazionali}"
+									th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
+									th:value="${obiettivoNazionale.id}"
+									th:text="${obiettivoNazionale.nome}">
+								</option>
+							</optgroup>
+						</select>
+					</div>
+					<div class="col-xs-1">
+						<div th:attr="data-original-title=#{label.info_tooltip_obiettivo_nazionale}" class="btn btn-default cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
+					</div>
+				</div>
+
+				<!-- OBIETTIVO REGIONALE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>15</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivorRegionale">
+						<span th:text="#{label.obiettivo_formativo_regionale}">Obiettivo Strategico Regionale</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+						<select id="obiettivoRegionale"
+							class="selectpicker required"
+							th:field="${eventoWrapper.evento.obiettivoRegionale}"
+							data-width="100%" data-style="btn-primary"
+							data-actions-box="true" data-size="10"
+							data-hide-disabled="false"
+							title="Seleziona un obiettivo...">
+							<option
+								th:each="obiettivoRegionale, row: ${eventoWrapper.obiettiviRegionali}"
+								th:value="${obiettivoRegionale.id}"
+								th:text="${obiettivoRegionale.nome}">
+							</option>
+						</select>
+					</div>
+				</div>
+
+				<!-- PROFESSIONI/DISCIPLINE -->
+				<div class="item form-group">
+					<label class="control-label col-xs-1">
+						<span>15</span>
+					</label>
+					<label class="control-label col-md-3 col-sm-3 col-xs-11">
+						<span th:text="#{label.professioni_discipline}">Professioni / Discipline</span>
+						<span class="required">*</span>
+					</label>
+
+					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="evento_professioni-select">
+						<div class="col-xs-12 select-with-margin-container">
+							<select id="professioni" class="selectpicker required multi"
+								multiple="multiple" data-width="100%"
+								data-style="btn-primary" data-actions-box="true"
+								data-size="10" title="Seleziona una professione..."
+								onchange="abilitaDiscipline(this)"
+								data-selected-text-format="count" th:remove="all-but-first">
+								<option th:each="professione, row: ${eventoWrapper.professioneList}"
+									th:value="${professione.id}" th:text="${professione.nome}"
+									th:field="${eventoWrapper.evento.professioniSelezionate}"></option>
+							</select>
+						</div>
+						<select id="discipline" class="selectpicker required multi"
+							th:field="${eventoWrapper.evento.discipline}"
+							multiple="multiple" data-width="100%"
+							data-style="btn-success" data-actions-box="true"
+							data-size="10" data-hide-disabled="true"
+							title="Seleziona una disciplina..." disabled="disabled"
+							data-selected-text-format="count" th:remove="all-but-first">
+							<optgroup class="optgroup-success" disabled="disabled"
+								th:each="professione, row: ${eventoWrapper.professioneList}" th:unless="${professione.nome == 'Nessuna professione sanitaria'}"
+								th:label="${professione.nome}" th:remove="all-but-first">
+								<option th:each="disciplina, row: ${eventoWrapper.disciplinaList}"
+									th:if="${disciplina.professione == professione}"
+									th:value="${disciplina.id}" th:text="${disciplina.nome}"></option>
+							</optgroup>
+						</select>
+					</div>
+				</div>
+
 				<input id="submitButton" type="submit" style="display: none;" />
 
 			</form>
+
+			<script th:inline="javascript">
+			/*<![CDATA[*/
+				$(document).ready(function() {
+					var days = getDayNamesShort();
+					var months = getMonthNames();
+
+					$('#dateIntermedie').daterangepicker({
+				        singleDatePicker: true,
+				        autoApply: false,
+				        autoUpdateInput: true,
+				        format: "DD/MM/YYYY",
+				        locale: {
+					        daysOfWeek: days,
+			                monthNames: months,
+				        }
+				    })
+
+				    $('#dateIntermedie').on("hide.daterangepicker", function() {
+						$(this).closest('.bad').removeClass('bad').find('div.alert').fadeOut(150, function() {
+							$(this).remove();
+						});
+					});
+
+				});
+
+				var index = [[${#lists.size(eventoWrapper.dateIntermedieTemp)}]] - 1;
+
+				function aggiungiDataIntermedia(caller) {
+					console.log(caller);
+					$("<div class='nextDataIntermedia item form-group'></div>")
+						.append($("<div class='col-md-4 col-sm-4 col-xs-12'></div>"))
+						.append($(caller).parent().clone())
+						.appendTo(".date-intermedie-container");
+					$(caller).children().toggleClass('fa-plus fa-minus');
+					$(caller).attr("onclick", "removeDataIntermedia(this)");
+					$(caller).siblings().attr("name", "dateIntermedieTemp["+ ++index +"]");
+				}
+
+				function removeDataIntermedia(caller) {
+					$(caller).closest(".item").remove();
+				}
+			/*]]>*/
+			</script>
 		</div>
 	</th:block>
 </body>
