--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -5437,3 +5437,14 @@ ul.notifications {
   width: 100%;
   height: 2px;
 }
+
+.risultato-atteso {
+	margin-right: 10px;
+	padding: 6px 12px;
+	border: 1px solid #CCD0D7;
+	margin-bottom: 10px;
+}
+
+.text-risultato {
+	margin-right: 5px;
+}
